--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ body {
   background-size: cover;
 }
 
+main {
+  position: relative;
+}
+
 header {
   margin-top: 1em;
   text-align: center;
@@ -47,6 +51,7 @@ ul {
   list-style: none;
   margin: 0 auto;
   padding: 2em;
+  max-width: 480px;
 }
 
 ul > li {
