--- a/index.css
+++ b/index.css
@@ -15,6 +15,9 @@ body {
 
 main {
   position: relative;
+  opacity: 0;
+  filter: blur(10px);
+  transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
 
 header {
